--- a/src/scss/suscripcion.scss
+++ b/src/scss/suscripcion.scss
@@ -5,7 +5,7 @@
     }
 
     .suscription .container p {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .suscription .container .mail {
